--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animsition": "^4.0.2",
+    "assert": "^2.0.0",
+    "axios": "^1.4.0",
+    "buffer": "^6.0.3",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
     "mdbreact": "^5.2.0",
     "popper.js": "^1.16.1",
@@ -21,7 +26,10 @@
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "stream": "^0.0.2",
+    "timers": "^0.1.1",
+    "web-vitals": "^2.1.4",
+    "xml2js": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
