--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "assert": "^2.0.0",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
