--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "buffer": "^6.0.3",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
     "mdbreact": "^5.2.0",
@@ -35,6 +36,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "start-proxy": "react-scripts start --proxy http://localhost:3000/home",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -58,5 +60,6 @@
   },
   "devDependencies": {
     "file-loader": "^6.2.0"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
