--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.4",
+    "mdb-react-ui-kit": "^6.1.0",
     "mdbreact": "^5.2.0",
     "popper.js": "^1.16.1",
     "postscribe": "^2.0.8",
@@ -60,6 +61,6 @@
   },
   "devDependencies": {
     "file-loader": "^6.2.0"
-  }, 
+  },
   "proxy": "http://localhost:3000"
 }
