--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.6.4",
     "mdb-react-ui-kit": "^6.1.0",
     "mdbreact": "^5.2.0",
+    "nodemailer": "^6.9.3",
     "popper.js": "^1.16.1",
     "postscribe": "^2.0.8",
     "prop-types": "^15.8.1",
